--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd-mobile": "^1.1.1",
     "babel-plugin-import": "^1.1.1",
     "immutable": "^3.8.1",
+    "lib-flexible": "^0.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
