--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lib-flexible": "^0.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-hammerjs": "^0.5.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
