add jest path alias

--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
     ],
     "moduleNameMapper": {
-      "^react-native$": "react-native-web"
+      "^react-native$": "react-native-web",
+      "^@(.*)$":"<rootDir>/src$1"
     }
   },
   "babel": {
