--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "0.26.1",
     "detect-port": "1.1.0",
     "dotenv": "2.0.0",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-react-app": "^0.6.2",
     "eslint-config-standard": "^10.2.1",
