--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
+    "react-addons-test-utils": "^15.3.0",
     "react-css-modules": "^4.0.5",
     "react-dev-utils": "^0.5.2",
     "react-test-renderer": "^15.3.0",
